--- a/03/index.html
+++ b/03/index.html
@@ -657,8 +657,8 @@ console.log(object);    //{id: 1, name: "山口", list: Array(3), subObject: {..
 </ul>
 <h3>undefinedの例</h3>
 <pre><code>const person = {
-	name: '山口',
-	age: 22
+  name: '山口',
+  age: 22
 };
 
 //値の取得
@@ -675,56 +675,121 @@ console.log(address);    //undefined
 
 
 <section>
-<h2><b>0</b></h2>
-<h4>SAMPLE #0<b></b></h4>
+<h2><b>069</b>オブジェクトを複製する</h2>
+<pre><code>Object.assign({}, コピー元オブジェクト)    //オブジェクトをコピーする
+[...コピー元オブジェクト]    //オブジェクトの各要素を分割代入する（コピー）</code></pre>
+<pre><code>const obj1 = {
+  result: true,
+  id: 1
+}
+
+//Object.assignの場合
+const obj2 = Object.assign({}, obj1);
+
+//スプレッド演算子の場合
+const obj3 = {...obj1};
+</code></pre>
 </section><!-- section -->
 
 
 <section>
-<h2><b>0</b></h2>
-<h4>SAMPLE #0<b></b></h4>
+<h2><b>070</b>オブジェクトのプロパティがあるかを調べる</h2>
+<pre><code>オブジェクト.hasOwnProperty(キー)
+キー in オブジェクト
+</code></pre>
+<pre><code>const user = {
+  name: '山口',
+  id: 1
+}
+
+console.log(user.hasOwnProperty('id'));    //true
+console.log('name' in user);    //true
+
+//nullじゃないかを調べる
+console.log(user.id != null);    //true
+</code></pre>
 </section><!-- section -->
 
 
 <section>
-<h2><b>0</b></h2>
-<h4>SAMPLE #0<b></b></h4>
+<h2><b>071</b>オブジェクトの各値に処理をする</h2>
+<pre><code>Object.keys(オブジェクト)    //オブジェクトの各キーの配列
+Object.values(オブジェクト)    //オブジェクトの各値の配列
+Object.entries(オブジェクト)    //オブジェクトの各プロパティの配列
+</code></pre>
+<ul>
+	<li>キーごと、値ごと、プロパティごとを列挙した配列を作成</li>
+</ul>
+<pre><code>const user = {
+  id: 1,
+  name: '山口',
+  age: 26
+}
+
+//キーごと
+console.log(Object.keys(user));    //['id', 'name', 'age']
+
+//値ごと
+console.log(Object.values(user));    //[1, '山口', 26]
+
+//プロパティごと
+console.log(Object.entries(user));    //[['id', 1], ['name', '山口'], ['age', 26]]
+</code></pre>
 </section><!-- section -->
 
 
 <section>
-<h2><b>0</b></h2>
-<h4>SAMPLE #0<b></b></h4>
+<h2><b>072</b>複数の変数にオブジェクトからまとめて値を代入する（分割代入）</h2>
+<pre><code>{変数1, 変数2} = オブジェクト</code></pre>
+<ul>
+	<li>オブジェクトから変数と同名のキーの値を取り出し、変数に展開する</li>
+	<li>該当しないキー名を指定するとundefinedになる</li>
+</ul>
+<pre><code>const user = {
+  id: 1,
+  name: '山口',
+  age: 26
+}
+
+const {id, name} = user;
+console.log(id);    //1
+console.log(name);    //'山口'
+console.log(address);    //undefined
+
+//nameキーの値を変数に保持
+const {name: myName} = user;
+console.log(myName);    //'山口'
+</code></pre>
 </section><!-- section -->
 
 
 <section>
-<h2><b>0</b></h2>
-<h4>SAMPLE #0<b></b></h4>
-</section><!-- section -->
+<h2><b>073</b>オブジェクトを編集不可能にする</h2>
+<pre><code>Object.freeze(オブジェクト)    //オブジェクトを変更不可能にする
+Object.isFrozen(オブジェクト)    //オブジェクトを変更不可能かどうか
+Object.seal(オブジェクト)    //プロパティの追加・削除のみ禁止。変更は可能。
+Object.preventExtensions(オブジェクト) //プロパティの追加のみ禁止。削除・変更は可能。
+</code></pre>
+<pre><code>'use strict';    //エラー検知を有効
 
+const obj = {id: 10, name: '山口'};
+Object.freeze(obj);
 
-<section>
-<h2><b>0</b></h2>
-<h4>SAMPLE #0<b></b></h4>
-</section><!-- section -->
+obj.id = 20;    //変更できないためエラー
+obj.age = 33;    //追加できないためエラー
 
+//配列も同様に変更不可能にできる
+const array = [1, 2, 3];
+Object.freeze(array);
+array.push(4);    //変更できないためエラー
+</code></pre>
+<h3>変更不可能かの確認</h3>
+<pre><code>'use strict';
 
-<section>
-<h2><b>0</b></h2>
-<h4>SAMPLE #0<b></b></h4>
-</section><!-- section -->
-
-
-<section>
-<h2><b>0</b></h2>
-<h4>SAMPLE #0<b></b></h4>
-</section><!-- section -->
-
-
-<section>
-<h2><b>0</b></h2>
-<h4>SAMPLE #0<b></b></h4>
+const obj = {id: 10, name: '山口'};
+Object.freeze(obj);
+console.log(Object.isFrozen(obj));    //true（不可能になってる）
+</code></pre>
 </section><!-- section -->
 
 <script src="../js/03.js"></script>
