--- a/04/index.html
+++ b/04/index.html
@@ -74,37 +74,237 @@ num = 20;    //numに20を格納しても、10と20は別のデータ
 
 <section>
 <h2><b>076</b>データの型を調べる</h2>
-<pre><code>
+<pre><code>typeof 値    //値のデータ型を調べる</code></pre>
+<ul>
+<li>型情報の文字列比較可能になるため、型の判別に役立てる</li>
+</ul>
+<table>
+<tr>
+	<th>データ型</th>
+	<th>typeofの結果</th>
+	<th>データの例</th>
+</tr>
+<tr>
+	<td>Undefined</td>
+	<td>undefined</td>
+	<td>undefined</td>
+</tr>
+<tr>
+	<td>Null</td>
+	<td>object</td>
+	<td>null</td>
+</tr>
+<tr>
+	<td>Boolean</td>
+	<td>boolean</td>
+	<td>true、false</td>
+</tr>
+<tr>
+	<td>String</td>
+	<td>string</td>
+	<td>'りんご'</td>
+</tr>
+<tr>
+	<td>Symbol</td>
+	<td>symbol</td>
+	<td>Symbol()</td>
+</tr>
+<tr>
+	<td>Number</td>
+	<td>number</td>
+	<td>1、30</td>
+</tr>
+<tr>
+	<td>Object（関数を除く）</td>
+	<td>object</td>
+	<td>[1, 2, 3]、{id: 20, name: 'りんご'}</td>
+</tr>
+<tr>
+	<td>関数</td>
+	<td>function</td>
+	<td>function(){}、class MyClass{}</td>
+</tr>
+</table>
+<h3>console.logで出力した例</h3>
+<pre><code>console.log(typeof true);    //boolean
+console.log(typeof 100);    //number
+console.log(typeof null);    //object（「typeof null」の結果はnullではなくobjectとなる）
 </code></pre>
 </section><!-- section -->
 
 <section>
-<h2><b>077</b></h2>
-<pre><code>
+<h2><b>077</b>オブジェクトのインスタンスかどうか調べる</h2>
+<pre><code>値 instanceof オブジェクト    //値がオブジェクトのインスタンスかどうか</code></pre>
+<h3>console.logで出力した例</h3>
+<pre><code>const today = new Date();
+console.log(today instanceof Date);    //true
+console.log(today instanceof Array);    //false</code></pre>
+</section><!-- section -->
+
+<section>
+<h2><b>078</b>値渡しと参照渡しを使い分ける</h2>
+<ul>
+	<li>あるデータを変数から変数に渡すとき「値渡し」と「参照渡し」の違いがある</li>
+	<li>プリミティブ型は「値渡し」</li>
+	<li>オブジェクト型は「参照渡し」</li>
+</ul>
+<h3>値渡し（プリミティブ型）</h3>
+<pre><code>let a = 100;
+let b = a;    //aに格納されている100のコピーがbに渡される（値渡し）
+a = 500;
+console.log(b);    //100（bのデータは500に変わらない）
+</code></pre>
+<h3>参照渡し（オブジェクト型）</h3>
+<pre><code>let a = [1, 2, 3];
+let b = a;    //aに格納されている配列の参照がbに渡される（参照渡し）
+a[0] = 100;
+console.log(b);    //[100, 2, 3]（bはaと同じ配列を参照しているので100に変わる）
+</code></pre>
+<h3>関数の引数における値渡し</h3>
+<pre><code>function myFunc(x) {
+	x = x + 2;
+	console.log(x);    //12（この結果はaに影響しない）
+}
+
+let a = 10;
+
+myFunc(a);
+
+console.log(a);    //10（12にならない）
+</code></pre>
+<h3>関数の引数における参照渡し</h3>
+<pre><code>function myFunc(x) {
+	x[0] = 100;
+	console.log(x);    //[100, 2, 3]（この結果はaに影響する）
+}
+
+let a = [1, 2, 3];
+
+myFunc(a);
+
+console.log(a);    //[100, 2, 3]
 </code></pre>
 </section><!-- section -->
 
 <section>
-<h2><b>078</b></h2>
-<pre><code>
+<h2><b>079</b>型を変換する</h2>
+<table>
+	<tr>
+		<th>メソッド</th>
+		<th>意味</th>
+		<th>戻り値</th>
+	</tr>
+	<tr>
+		<td>Boolean(値)</td>
+		<td>値を「真偽値型」に変換</td>
+		<td>真偽値</td>
+	</tr>
+	<tr>
+		<td>String(値)</td>
+		<td>値を「文字列型」に変換</td>
+		<td>文字列</td>
+	</tr>
+	<tr>
+		<td>Number(値)</td>
+		<td>値を「数値型」に変換</td>
+		<td>数値</td>
+	</tr>
+	<tr>
+		<td>parseInt(文字列)</td>
+		<td>文字列を「数値型（整数）」に変換</td>
+		<td>数値</td>
+	</tr>
+	<tr>
+		<td>parsFloat(文字列)</td>
+		<td>文字列を「数値型（浮動小数点）」に変換</td>
+		<td>数値</td>
+	</tr>
+</table>
+<h3>「明示的な型変換」</h3>
+<pre><code>Boolean(1);    //true
+Boolean(0);    //false
+Boolean('りんご');    //true
+Boolean('');    //false
+
+String(20);    //"20"
+
+Number('1');    //1
+Number('');    //0
+Number('りんご');    //NaN
+Number(true);    //1
+Number(false);    //0
+</code></pre>
+<h3>型が自動的に変わる「暗黙の型変換」</h3>
+<pre><code>console.log(100 + '200');    //'100200'（数値100が文字列型に変換される）
+console.log('200' - 100);    //100（文字列'200'が数値型に変換される）
+console.log(1 == '1');    //true（数値1が文字列型に変換される）
 </code></pre>
 </section><!-- section -->
 
 <section>
-<h2><b>079</b></h2>
-<pre><code>
+<h2><b>080</b>値が未定義の場合の取り扱い（undefined）</h2>
+<ul>
+	<li>値が未定義の場合の型（出現するケース）</li>
+	<li>・変数に値を与えない</li>
+	<li>・オブジェクトのプロパティに値を与えない</li>
+	<li>・引数に値を与えない</li>
+</ul>
+<pre><code>let a;
+console.log(a);    //undefined（変数に値を与えない）
+
+const object = {};
+console.log(object.b);    //undefined（オブジェクトのプロパティに値を与えない）
+
+function myFunc(c) {
+	console.log(`bの値は${c}`);
+}
+myFunc();    //bの値はundefined（引数に値を与えない）
 </code></pre>
 </section><!-- section -->
 
 <section>
-<h2><b>080</b></h2>
-<pre><code>
-</code></pre>
-</section><!-- section -->
+<h2><b>081</b>値がない場合の取り扱い（null）</h2>
+<ul>
+	<li>値が存在しないの場合の型</li>
+</ul>
+<h3>引数のIDに応じてユーザー名を返す関数の例</h3>
+<pre><code>function searchUser(targetId) {
+	const userList = [
+		{id: 1, name: 'りんご'},
+		{id: 2, name: 'いちご'},
+		{id: 3, name: 'みかん'}
+	];
 
-<section>
-<h2><b>081</b></h2>
-<pre><code>
+	const targetUser = userList.find((user) => user.id === targetId);
+
+	//値が存在しないときの処理
+
+	return targetUser.name;
+}
+
+searchUser(1);    //'りんご'
+searchUser(4);    //エラー（undefined）該当するユーザが存在しない
+</code></pre>
+<h3>エラー処理を追加した例</h3>
+<pre><code>function searchUser(targetId) {
+	const userList = [
+		{id: 1, name: 'りんご'},
+		{id: 2, name: 'いちご'},
+		{id: 3, name: 'みかん'}
+	];
+
+	const targetUser = userList.find((user) => user.id === targetId);
+
+	//値が存在しないときの処理
+	if(targetUser === undefined) {
+		return null;
+	}
+
+	return targetUser.name;
+}
+
+searchUser(1);    //'りんご'
+searchUser(4);    //null
 </code></pre>
 </section><!-- section -->
 
