--- a/index.html
+++ b/index.html
@@ -8,14 +8,31 @@
 	<title>【js_01】基礎</title>
 	<!--css-->
 	<link rel="stylesheet" href="css/base.css" media="all">
-	<style>h1 a {text-decoration: none;}h1 a:hover {opacity: 0.7;}body {padding-top: 80px;}</style>
+	<style>body {padding-top: 80px;}li{margin-bottom: 20px;}</style>
 	<!--js-->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-<h1><a href="01/">【Chapter1】Javascriptの基礎【01〜19】</a></h1>
-<h1><a href="02/">【Chapter2】真偽値や数値や文字の取り扱い【20〜44】</a></h1>
-<h1><a href="03/">【Chapter3】複数データの取り扱い【45〜73】</a></h1>
-<h1><a href="04/">【Chapter4】データについて深く知る【74〜81】</a></h1>
+<ol>
+	<li><a href="01/">【Chapter1】Javascriptの基礎【01〜19】</a></li>
+	<li><a href="02/">【Chapter2】真偽値や数値や文字の取り扱い【20〜44】</a></li>
+	<li><a href="03/">【Chapter3】複数データの取り扱い【45〜73】</a></li>
+	<li><a href="04/">【Chapter4】データについて深く知る【74〜81】</a></li>
+	<li><a href="05/">【Chapter5】日付や時間の取り扱い【82〜93】</a></li>
+	<li><a href="06/">【Chapter6】【〜】</a></li>
+	<li><a href="07/">【Chapter7】【〜】</a></li>
+	<li><a href="08/">【Chapter8】【〜】</a></li>
+	<li><a href="09/">【Chapter9】【〜】</a></li>
+	<li><a href="10/">【Chapter10】【〜】</a></li>
+	<li><a href="11/">【Chapter11】【〜】</a></li>
+	<li><a href="12/">【Chapter12】【〜】</a></li>
+	<li><a href="13/">【Chapter13】【〜】</a></li>
+	<li><a href="14/">【Chapter14】【〜】</a></li>
+	<li><a href="15/">【Chapter15】【〜】</a></li>
+	<li><a href="16/">【Chapter16】【〜】</a></li>
+	<li><a href="17/">【Chapter17】【〜】</a></li>
+	<li><a href="18/">【Chapter18】【〜】</a></li>
+	<li><a href="19/">【Chapter19】【〜】</a></li>
+</ol>
 </body>
 </html>
