--- a/05/index.html
+++ b/05/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="ja">
 
 <head>
 	<meta charset="UTF-8">
@@ -281,7 +281,7 @@ alert(num);</code></pre>
 </section><!-- section -->
 
 <section>
-<h2><b>08</b></h2>
+<h2><b>091</b></h2>
 <table>
 	<tr>
 		<th>メソッド</th>
@@ -303,7 +303,7 @@ alert(num);</code></pre>
 </section><!-- section -->
 
 <section>
-<h2><b>08</b></h2>
+<h2><b>092</b></h2>
 <table>
 	<tr>
 		<th>メソッド</th>
@@ -325,7 +325,7 @@ alert(num);</code></pre>
 </section><!-- section -->
 
 <section>
-<h2><b>08</b></h2>
+<h2><b>093</b></h2>
 <table>
 	<tr>
 		<th>メソッド</th>
