--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="ja">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 	<title>【js_01】基礎</title>
 	<!--css-->
 	<link rel="stylesheet" href="css/base.css" media="all">
-	<style>body {padding-top: 80px;}li{margin-bottom: 20px;}</style>
+	<style>body {text-align: center; padding-top: 80px;}ol{display: inline-block;}li{text-align: left; margin-bottom: 20px;}a{display: inline-block;}</style>
 	<!--js-->
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
