--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<li><a href="04/">【Chapter4】データについて深く知る【74〜81】</a></li>
 	<li><a href="05/">【Chapter5】日付や時間の取り扱い【82〜93】</a></li>
 	<li><a href="06/">【Chapter6】ブラウザーの操作方法【94〜112】</a></li>
-	<li><a href="07/">【Chapter7】【〜】</a></li>
+	<li><a href="07/">【Chapter7】ユーザーアクションの取り扱い【113〜134】</a></li>
 	<li><a href="08/">【Chapter8】【〜】</a></li>
 	<li><a href="09/">【Chapter9】【〜】</a></li>
 	<li><a href="10/">【Chapter10】【〜】</a></li>
